--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,9 @@
     ],
     "skipLibCheck": true,
     "types": [
-      "node"
+      "node",
+      "react",
+      "vite/client"
     ],
     "moduleResolution": "bundler",
     "isolatedModules": true,
